--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "firebase-admin": "^13.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
