feat: adding scripts

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "dev-local": "npx nodemon index.js"
   },
   "dependencies": {
     "dotenv": "^16.5.0",
